# acestream-webplayer

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: ghcr.yml
scripts/: grab-js.sh
src/: main.rs
static/: index.html  style.css
templates/: 403.html.tera  stream.html.tera
