[package]
name = "acestream-webplayer"
version = "1.0.3"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
